--- a/src/services/emailTemplates/base.html
+++ b/src/services/emailTemplates/base.html
@@ -164,7 +164,7 @@
             </div>
             <div class="footer">
                 <p>Este es un mensaje automático del sistema de Gestión de Evidencias Tigo.</p>
-                <p>&copy; {{year}} {{appName}}. Todos los derechos reservados.</p>
+                <p>©️ {{year}} Tigo Colombia | Hecho con ♥️ por Iglú M&T</p>
             </div>
         </div>
     </div>
