feat: production prep, notification logic update, and favicon fix
- Refactored notification logic to broadcast to roles and only notify on status changes

- Added helmet and compression middleware to backend

- Configured frontend API URL for production

- Updated favicon to match login logo

- Added build_prod.sh script

- Cleaned up debug logs

--- a/backend/src/services/emailTemplates/base.html
+++ b/backend/src/services/emailTemplates/base.html
@@ -164,7 +164,7 @@
             </div>
             <div class="footer">
                 <p>Este es un mensaje automático del sistema de Gestión de Evidencias Tigo.</p>
-                <p>&copy; {{year}} {{appName}}. Todos los derechos reservados.</p>
+                <p>©️ {{year}} Tigo Colombia | Hecho con ♥️ por Iglú M&T</p>
             </div>
         </div>
     </div>
